--- a/proxy_with_workload_identity.yaml
+++ b/proxy_with_workload_identity.yaml
@@ -1,18 +1,3 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: web-server
-spec:
-  selector:
-    matchLabels:
-      app: web-server
-  template:
-    metadata:
-      labels:
-        app: web-server
-    spec:
-      serviceAccountName: vaporgaming-umd
-
 # Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -30,7 +15,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web-server
+  name: us.gcr.io/vaporgaming-umd/cad-site:version1
 spec:
   selector:
     matchLabels:
