--- a/proxy_with_workload_identity.yaml
+++ b/proxy_with_workload_identity.yaml
@@ -15,7 +15,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web-server
+  name: cloud_proxy_deploy
 spec:
   selector:
     matchLabels:
@@ -32,6 +32,7 @@ spec:
         resources:
           requests:
              cpu: "50m"
+        priorityClassName: high-priority
         env:
         - name: DB_USER
           valueFrom:
