--- a/proxy_with_workload_identity.yaml
+++ b/proxy_with_workload_identity.yaml
@@ -11,6 +11,13 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+apiVersion: apps/v1
+kind: PriorityClass
+metadata:
+  name: cloud_proxy_deploy
+value: 1000000
+preemptionPolicy: PreemptLowerPriority
+globalDefault: false
 
 apiVersion: apps/v1
 kind: Deployment
@@ -32,7 +39,6 @@ spec:
         resources:
           requests:
              cpu: "50m"
-        priorityClassName: high-priority
         env:
         - name: DB_USER
           valueFrom:
