--- a/proxy_with_workload_identity.yaml
+++ b/proxy_with_workload_identity.yaml
@@ -15,7 +15,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cloud_proxy_deploy
+  name: CloudProxy
 spec:
   selector:
     matchLabels:
