--- a/preemption.yaml
+++ b/preemption.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: PriorityClass
 metadata:
-  name: high-priority-nonpreempting
+  name: cloud-proxy
 value: 1000000
 preemptionPolicy: Never
 globalDefault: false
