--- a/deploy.yaml
+++ b/deploy.yaml
@@ -4,6 +4,9 @@ metadata:
   name: cloudsql-proxy
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: cloudsql-proxy
   template:
     metadata:
       labels:
@@ -16,7 +19,7 @@ spec:
         command: ["/cloudsql-proxy", "-instances=vaporgaming-umd:us-east5:vaporgaming-umd=tcp:127.0.0.1:3306","credential_file=/secrets/cloudsql/vaporgaming-umd-043ee9946f6a.json"]
         volumeMounts:
         - name: cloudsql-instance-credentials
-          mountpath: /secrets/cloudsql
+          mountPath: /secrets/cloudsql
           readOnly: true
       volumes:
       - name: cloudsql-instance-credentials
