--- a/deploy.yaml
+++ b/deploy.yaml
@@ -6,7 +6,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: cloudsql-proxy
+      app: cloudsql-proxy
   template:
     metadata:
       labels:
