--- a/deploy.yaml
+++ b/deploy.yaml
@@ -25,5 +25,5 @@ spec:
       - name: cloudsql-instance-credentials
         secret:
           secretName: cloudsql-instance-credentials
-      - name: cloudsql
+      - name: vaporgaming-umd
         emptyDir:
