--- a/deploy.yaml
+++ b/deploy.yaml
@@ -15,17 +15,10 @@ spec:
     spec:
       containers:
       - name: cloudsql-proxy
-        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.1.0
-        args:
-          # If connecting from a VPC-native GKE cluster, you can use the
-          # following flag to have the proxy connect over private IP
-          # - "--private-ip"
-
-          # Enable structured logging with LogEntry format:
-          - "--structured-logs"
-
-          # Replace DB_PORT with the port the proxy should listen on
-          - "-instances=vaporgaming-umd:us-east5:vaporgaming-umd=tcp:3306"
+        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:1.11
+        command: ["/cloudsql-proxy",
+            "-instances=vaporgaming-umd:us-east5:vaporgaming-umd=tcp:0.0.0.0:3306",
+            "-credential_file=/VaporGaming-UMD/cloudsql/vaporgaming-umd-043ee9946f6a.json"]
         volumeMounts:
         - name: cloudsql-instance-credentials
           mountPath: /VaporGaming-UMD/cloudsql
