--- a/proxy_with_workload_identity.yaml
+++ b/proxy_with_workload_identity.yaml
@@ -31,6 +31,7 @@ spec:
       # [START cloud_sql_proxy_k8s_secrets]
       containers:
       - name: cloud-proxy
+        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.1.0
         env:
         - name: DB_USER
           valueFrom:
