--- a/proxy_with_workload_identity.yaml
+++ b/proxy_with_workload_identity.yaml
@@ -1,5 +1,50 @@
-- name: DB_HOST
-  valueFrom:
-    secretKeyRef:
-      name: vaporgaming-secret
-      key: db_host
+# Copyright 2021 Google LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx-1
+spec:
+  selector:
+    matchLabels:
+      app: nginx-1
+  template:
+    metadata:
+      labels:
+        app: nginx-1
+    spec:
+      containers:
+      - name: nginx-1
+        # ... other container configuration
+        - name: DB_USER
+          valueFrom:
+            secretKeyRef:
+              name: vaporgaming-dbsecret
+              key: username
+        - name: DB_PASS
+          valueFrom:
+            secretKeyRef:
+              name: vaporgaming-dbsecret
+              key: password
+        - name: DB_NAME
+          valueFrom:
+            secretKeyRef:
+              name: vaporgaming-dbsecret
+              key: database
+        - name: DB_HOST
+          valueFrom:
+            secretKeyRef:
+              name: vaporgaming-secret
+              key: db_host
