--- a/proxy_with_workload_identity.yaml
+++ b/proxy_with_workload_identity.yaml
@@ -27,6 +27,7 @@ spec:
     spec:
       containers:
       - name: sidecar
+        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.1.0
         env:
         - name: DB_USER
           valueFrom:
